Fixed navigation on mobile and blog post tile issues

--- a/scss/navigation.scss
+++ b/scss/navigation.scss
@@ -205,6 +205,7 @@
     .overlay-content {
 
         margin-top: -60px;
+        margin-bottom: 750px;
 
         a {
 
@@ -214,6 +215,14 @@
 
         }
 
+    }
+
+    .overlay {
+
+        background: #F2F1EF;
+        width: 100%;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 
 
