--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -453,6 +453,11 @@ h1 {
         right: 60px;
     }
 
+    .postTile {
+
+        margin-top: 25px;
+    }
+
 }
 
 @media (max-width: 420px) {
